--- a/public/movieRanking.html
+++ b/public/movieRanking.html
@@ -6,7 +6,7 @@
     <title>Movie Ranking</title>
 </head>
 <body>
-    <h1>The Top Movies of All Time According to Sujan</13>
+    <h1>The Top Movies of All Time According to Sujan</h2>
     <h2>My best two movies</h2>
     <hr>
     <h3>Saving Private Ryan</h3>
