--- a/courses/capstone projects/index.html
+++ b/courses/capstone projects/index.html
@@ -19,7 +19,7 @@
         <img class="image top-cloud" src="./assets/images/cloud.jpg" alt="Image1">
         <div class="title-text">
             <h1>I'm Sujan</h1>
-            <h2>a <span class="pro">pro</span>grammer</h2>
+            <h2>Actively <span class="pro">Learn</span>ing</h2>
         </div>
         <div class="title-image">
             <img class="image bottom-cloud" src="./assets/images/cloud.jpg" alt="Image1">
